# agent-ctrl

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  package-lock.json  package.json  skills-lock.json
.github/workflows/: ci.yml  release.yml  site.yml
crates/ax-fixture/: Cargo.toml
crates/ax-fixture/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  doctor.rs  info.rs  main.rs
crates/cli/tests/: cli_json_contract.rs  macos_ax_fixture.rs  windows_uia_fixture.rs
crates/core/: Cargo.toml
crates/core/src/: action.rs  error.rs  inspect.rs  lib.rs  mock.rs  node.rs  role.rs  snapshot.rs  surface.rs  wait.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: client.rs  dispatcher.rs  factory.rs  ipc.rs  lib.rs  session_file.rs  state.rs
crates/surface-ax/: Cargo.toml
crates/surface-ax/src/: lib.rs  macos.rs
crates/surface-cdp/: Cargo.toml
crates/surface-cdp/src/: lib.rs
crates/surface-uia/: Cargo.toml
crates/surface-uia/src/: lib.rs  windows_impl.rs
crates/uia-fixture/: Cargo.toml
crates/uia-fixture/src/: main.rs
docs/: macos-ax-reliability.md  macos-ax.md  uia-mapping.md  windows-reliability.md
examples/: notepad-tour.sh
scripts/: copy-native.js  install-macos.sh  install-windows.ps1  postinstall.js  sync-version.js
site/: README.md  index.html  package-lock.json  package.json  script.js  styles.css
site/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
site/components/: code-mock.tsx  install-command.tsx  install-tabs.tsx  theme-toggle.tsx
skills/agent-ctrl/: SKILL.md
