[package]
name = "agent-ctrl-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "agent-ctrl command-line binary."

[[bin]]
name = "agent-ctrl"
path = "src/main.rs"

[dependencies]
agent-ctrl-core.workspace = true
agent-ctrl-daemon.workspace = true
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64 = "0.22"

[lints]
workspace = true
