[package]
name = "agent-ctrl-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "agent-ctrl command-line binary."
publish = false

[[bin]]
name = "agent-ctrl"
path = "src/main.rs"

[dependencies]
agent-ctrl-core.workspace = true
agent-ctrl-daemon.workspace = true
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Console"] }

[target.'cfg(target_os = "macos")'.dependencies]
agent-ctrl-surface-ax.workspace = true

[lints]
workspace = true
