[package]
name = "agent-ctrl-surface-ax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "macOS Accessibility (AX) surface for agent-ctrl."
publish = false

[dependencies]
agent-ctrl-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2"
core-foundation-sys = "0.8"
objc = "0.2"
png = "0.17"
base64 = "0.22"
serde_json.workspace = true

[lints]
workspace = true
