[package]
name = "agent-ctrl-surface-cdp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Chromium-via-CDP surface for agent-ctrl (cross-platform)."

[dependencies]
agent-ctrl-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# Future implementation will add:
#   tokio-tungstenite - CDP WebSocket transport
#   reqwest           - Chrome version discovery (/json/version)
# See agent-browser's cli/src/native/cdp/ for the reference shape.

[lints]
workspace = true
